--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,8 +22,8 @@
     %div#search
       = form_tag search_item_path, :method => :put do
       
-        = label :terms, :terms, 'Terms'
-        = text_field :terms, :terms
+        = label :terms, 'Terms'
+        = text_field :terms
 
         = submit_tag 'Search'
         
