--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,7 +20,7 @@
           %span= link_to 'Logout', logout_user_path
           
     %div#search
-      = form_tag search_item_path, :method => :put do
+      = form_tag search_item_path(@terms), :method => :put do
       
         = label :terms, 'Terms'
         = text_field :terms
