--- a/app/views/items/search.html.haml
+++ b/app/views/items/search.html.haml
@@ -3,3 +3,19 @@
 %div.ind_header
     %h2 Search Results
     %h4= link_to 'Go to listings', items_path
+    
+- @items.each do |item|
+  %div.listing
+    %div.l_left
+      %div= link_to "#{item.title}", item_path(item)
+      %div= item.description
+    %div.l_right
+      %div
+        %div Count:
+        %div.right= item.scount
+      %div
+        %div Condition:
+        %div.right= item.condition
+      %div
+        %div Status:
+        %div.right= item.status
