--- a/app/views/items/search.html.haml
+++ b/app/views/items/search.html.haml
@@ -12,7 +12,7 @@
     %div.l_right
       %div
         %div Count:
-        %div.right= item[:scount]
+        %div.right "#{item.scount}"
       %div
         %div Condition:
         %div.right= item.condition
