styles for search box; search now "remembers" terms (through eval *barf*)

--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -142,3 +142,7 @@ table#checkout thead {
 table#checkout tr:first-child {
   border-right: solid 1px #404040;
 }
+div#search {
+  margin-top: -1.5em;
+  margin-left: auto;
+}
