--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -143,6 +143,7 @@ table#checkout tr:first-child {
   border-right: solid 1px #404040;
 }
 div#search {
-  margin-top: -1.5em;
-  margin-left: auto;
+  margin-top: -1.2em;
+  margin-bottom: 0.2em;
+  float: right;
 }
