back button on checkout saving a checkout

--- a/app/views/checkouts/new.html.haml
+++ b/app/views/checkouts/new.html.haml
@@ -43,4 +43,5 @@
                             = check_box_tag (prefix + "e")
   
     = submit_tag 'Checkout'
-    = button_to 'Back', item_path(@item)
+
+= link_to 'Back', item_path(@item)
